<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- titles -->
    <string name="app_name">Высоцкий</string>

    <!-- labels -->
    <string name="splash_title">Колядник</string>
    <string name="android_collider_company">Android Collider © 2015</string>
    <string name="commentarii">Комментарии</string>
    <string name="comment_button">Добавить</string>
    <string name="name_hint">Ваше имя</string>
    <string name="comment_hint">Оставьте, пожалуйста, свой комментарий..</string>
    <string name="nadislaty_rozrobniku">Написать Разработчику</string>
    <string name="pishit_sudi">Пишите сюда...</string>
    <string name="favorite">Любимые</string>
    <string name="search">Поиск</string>
    <string name="sorting">Сортировка</string>


    <string name="slava_ukraini">\n\nПісня відправлена з \"Колядник\"\nСлава Україні!</string>

    <string name="title_activity_category">CategoryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song_types">SongTypesActivity</string>
    <string name="title_activity_song_list">SongListActivity</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="wait_for_download_text">Пожалуйста, подождите...</string>
    <string name="help_text">Воспользуетесь меню</string>
    <string name="help_dr_text">Убрать с главного экрана</string>
    <string name="dont_show">Больше не показывать</string>

    <string name="crash_toast_text">Oooops, crash!</string>

    <string name="succesfull_comm_add_message">Комментарий добавлен</string>

    <string name="double_enter">\n\n</string>




</resources>
