


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent" >

<!-- The main content view -->

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:id="@+id/song_list_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="gone">
            <ImageView
                android:background="@drawable/background_sort"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:id="@+id/iv_search_sort"
                android:src="@drawable/search_sort"/>
            <!--android:src="@drawable/route_saver_search_icon"-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/background_search_field"
                android:textColor="@color/text_color"
                android:id="@+id/et_search_song"
                android:layout_marginTop="5dp"
                android:textCursorDrawable="@drawable/cursor"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/song_list_layout_1"
            android:id="@+id/lv_songs_list"
            android:footerDividersEnabled="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            android:scrollbarStyle="insideInset"/>
        <!--
            android:scrollbarThumbVertical="@drawable/scroll_bar"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/text_color"
            android:text="@string/android_collider_company"
            android:background="@color/action_bar_color"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="15dp" />
        <ListView
            android:layout_width="150dp"
            android:layout_height="85dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:id="@+id/lv_sort_types"
            android:divider="@android:color/transparent"
            android:dividerHeight="2dp"
            android:background="@drawable/background_for_songs"
            android:visibility="gone" />

    </RelativeLayout>
<!-- The navigation drawer -->

<LinearLayout
    android:id="@+id/left_drawer"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="#ffffffff"
    android:orientation="vertical">
    <!--<ListView
        android:id="@+id/left_drawer1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <ImageView

            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:id="@+id/iv_search_drawer"
            android:src="@drawable/search_sort"/>
        <!--android:src="@drawable/route_saver_search_icon"-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="@color/text_color"
            android:id="@+id/et_search_song_drawer"
            android:layout_marginTop="5dp"
            android:textCursorDrawable="@drawable/cursor"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting"
            android:textSize="18sp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sort_spinner"/>
        </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        android:id="@+id/cb_favorite"
        android:textSize="18sp"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_search"
        android:text="@string/search"
        android:textSize="18sp"/>
    </LinearLayout>

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
-->

</android.support.v4.widget.DrawerLayout>
